changed from full to protabel

--- a/tools/WebStack.settings.targets
+++ b/tools/WebStack.settings.targets
@@ -42,7 +42,7 @@
   <!-- Per-configuration properties -->
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
+    <DebugType>portable</DebugType>
     <Optimize>false</Optimize>
     <DefineConstants>TRACE;DEBUG;CODE_ANALYSIS</DefineConstants>
   </PropertyGroup>
